Implemented JWT security, logins with social media platforms(Google, Github)